--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -102,7 +102,7 @@
                     {% endfor %}
                 </form>
             </div>
-            <table class="table table-striped table-hover" id="item-discovered">
+            <table class="table table-striped table-hover" id="items-discovered">
                 <tr>
                     <th>Title</th>
                     <th>Type</th>
