--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -6,93 +6,97 @@
 <div class="container-fluid" id="main">
     <div class="row">
         <div class="col-lg-3" id="folders">
-            <input class="btn btn-default" type="button" value="clear all" onclick="clearAllFaceted()">
-            <span id="color-scheme">
-                <svg width='180' height='24'>
-                    <rect class="YellowGreenBlue-colormap-band-1-fill" x="0" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-2-fill" x="20" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-3-fill" x="40" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-4-fill" x="60" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-5-fill" x="80" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-6-fill" x="100" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-7-fill" x="120" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-8-fill" x="140" width="20" height="20"></rect>
-                    <rect class="YellowGreenBlue-colormap-band-9-fill" x="160" width="20" height="20"></rect>
-                </svg>
-            </span>
-            {% for key, values in facets.fields.items %}
-                {% if values %}
-                    <div class="panel-group" id="faceting-{{ key }}">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" href="#{{ key }}">
-                                    {% if key == 'author'%}
-                                        &nbsp; Filter by Author
-                                    {% elif key ==  'subjects'%}
-                                        &nbsp; Filter by Subject
-                                    {% elif key ==  'resource_type'%}
-                                        &nbsp; Filter by Resource Type
-                                    {% elif key ==  'public'%}
-                                        &nbsp; Filter by Public
-                                    {% elif key ==  'owners_names'%}
-                                        &nbsp; Filter by Owner
-                                    {% elif key ==  'discoverable'%}
-                                        &nbsp; Filter by Discoverable
-                                    {% endif %}
-                                    <span
-                                        {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
-                                            class="glyphicon glyphicon-minus pull-left"
-                                        {% else %}
-                                            class="glyphicon glyphicon-plus pull-left"
-                                        {% endif %}>
-                                    </span>
-                                </a>
-                            </h4>
-                            </div>
-                            <div id="{{ key }}"
-                                 {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
-                                    class="panel-collapse collapse in"
-                                 {% else %}
-                                    class="panel-collapse collapse"
-                                 {% endif %}>
-                                <ul class="list-group">
-                                {% for item in values %}
-                                    {% if item.1 >= 2 %}
-                                        <li class="list-group-item">
-                                            <input class="faceted-selections" id="{{ key }}-{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ item.0 }}
-                                                {% if item.1 >= 2 and item.1 <= 4 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-1">
-                                                {% elif item.1 > 4 and item.1 <= 6 %}
-                                                     <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-2">
-                                                {% elif item.1 > 6 and item.1 <= 10 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-3">
-                                                {% elif item.1 > 10 and item.1 <= 18 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-4">
-                                                {% elif item.1 > 18 and item.1 <= 32 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-5">
-                                                {% elif item.1 > 32 and item.1 <= 57 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-6">
-                                                {% elif item.1 > 57 and item.1 <= 100 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-7">
-                                                {% elif item.1 > 100 and item.1 <= 178 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-8">
-                                                {% elif item.1 > 178 %}
-                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-9">
-                                                {% endif %}{{ item.1 }}
-                                            </span>
-                                        </li>
-                                    {% endif %}
-                                {% endfor %}
-                                </ul>
+            {% if query %}
+                <input class="btn btn-default" type="button" value="clear all" onclick="clearAllFaceted()">
+                <span id="color-scheme">
+                    <svg width='180' height='24'>
+                        <rect class="YellowGreenBlue-colormap-band-1-fill" x="0" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-2-fill" x="20" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-3-fill" x="40" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-4-fill" x="60" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-5-fill" x="80" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-6-fill" x="100" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-7-fill" x="120" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-8-fill" x="140" width="20" height="20"></rect>
+                        <rect class="YellowGreenBlue-colormap-band-9-fill" x="160" width="20" height="20"></rect>
+                    </svg>
+                </span>
+                {% for key, values in facets.fields.items %}
+                    {% if values %}
+                        <div class="panel-group" id="faceting-{{ key }}">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#{{ key }}">
+                                        {% if key == 'author'%}
+                                            &nbsp; Filter by Author
+                                        {% elif key ==  'subjects'%}
+                                            &nbsp; Filter by Subject
+                                        {% elif key ==  'resource_type'%}
+                                            &nbsp; Filter by Resource Type
+                                        {% elif key ==  'public'%}
+                                            &nbsp; Filter by Public
+                                        {% elif key ==  'owners_names'%}
+                                            &nbsp; Filter by Owner
+                                        {% elif key ==  'discoverable'%}
+                                            &nbsp; Filter by Discoverable
+                                        {% endif %}
+                                        <span
+                                            {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
+                                                class="glyphicon glyphicon-minus pull-left"
+                                            {% else %}
+                                                class="glyphicon glyphicon-plus pull-left"
+                                            {% endif %}>
+                                        </span>
+                                    </a>
+                                </h4>
+                                </div>
+                                <div id="{{ key }}"
+                                     {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
+                                        class="panel-collapse collapse in"
+                                     {% else %}
+                                        class="panel-collapse collapse"
+                                     {% endif %}>
+                                    <ul class="list-group">
+                                    {% for item in values %}
+                                        {% if item.1 >= 2 %}
+                                            <li class="list-group-item">
+                                                <input class="faceted-selections" id="{{ key }}-{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ item.0 }}
+                                                    {% if item.1 >= 2 and item.1 <= 4 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-1">
+                                                    {% elif item.1 > 4 and item.1 <= 6 %}
+                                                         <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-2">
+                                                    {% elif item.1 > 6 and item.1 <= 10 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-3">
+                                                    {% elif item.1 > 10 and item.1 <= 18 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-4">
+                                                    {% elif item.1 > 18 and item.1 <= 32 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-5">
+                                                    {% elif item.1 > 32 and item.1 <= 57 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-6">
+                                                    {% elif item.1 > 57 and item.1 <= 100 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-7">
+                                                    {% elif item.1 > 100 and item.1 <= 178 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-8">
+                                                    {% elif item.1 > 178 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-9">
+                                                    {% endif %}{{ item.1 }}
+                                                </span>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </ul>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
         </div>
-
         <div class="col-lg-9" id="items">
+            {% if not query %}
+                <h4>Enter a Search Term to Find Resources on HydroShare</h4>
+            {% endif %}
             <div class=resource-search>
                 <form method="get" action=".">
                     {% for field in form %}
@@ -102,14 +106,14 @@
                     {% endfor %}
                 </form>
             </div>
-            <table class="table table-striped table-hover" id="items-discovered">
-                <tr>
-                    <th>Title</th>
-                    <th>Type</th>
-                    <th>First Author</th>
-                    <th>Last Modified</th>
-                </tr>
-                {% if query %}
+            {% if query %}
+                <table class="table table-striped table-hover" id="items-discovered">
+                    <tr>
+                        <th>Title</th>
+                        <th>Type</th>
+                        <th>First Author</th>
+                        <th>Last Modified</th>
+                    </tr>
                     {% for result in page.object_list %}
                         <tr>
                             <td><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></td>
@@ -132,8 +136,8 @@
                             {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
                         </div>
                     {% endif %}
-                {% endif %}
-            </table>
+                </table>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -143,7 +147,7 @@
 {% block extra_js %}
     <script type="text/javascript">
     var reorderDivs = function() {
-        var faceted_fields = ['author', 'subjects', 'resource_type', 'public', 'owners_names', 'discoverable'];
+         var faceted_fields = ['author', 'subjects', 'resource_type', 'public', 'owners_names', 'discoverable'];
          var div_ordering = [];
          faceted_fields.forEach(function(field){
              var faceting_div = "faceting-"+field;
@@ -165,7 +169,6 @@
     }
 
     $(document).ready(function () {
-
          $("#id_q").attr('placeholder', 'Search...');
          reorderDivs();
          $('.collapse').on('shown.bs.collapse', function(){
@@ -177,6 +180,7 @@
          $("#id_q").keypress(function(event) {
             if (event.which == 13) {
                 event.preventDefault();
+                localStorage.clear();
                 $("form").submit();
             }
          });
@@ -184,7 +188,6 @@
              var tokens = $(this).val().split(",");
              var key = tokens[0];
              var value = tokens[1];
-             //var requestURL = window.location.href.split("&")[0];
              var textSearch = $("#id_q").val();
              var searchURL = "?q=" + textSearch;
              var windowPath = window.location.pathname;
