further change on the search prompt before any search term is entered so that only the first letter of the prompt is uppercase

--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -95,7 +95,7 @@
         </div>
         <div class="col-lg-9" id="items">
             {% if not query %}
-                <h4>Enter a Search Term to Find resources on HydroShare</h4>
+                <h4>Enter a search term to find resources on HydroShare</h4>
             {% endif %}
             <div class=resource-search>
                 <form method="get" action=".">
