Minor style changes

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -435,7 +435,8 @@
                     {
                         "targets": [0],     // Actions
                         "orderable": false,
-                        "searchable": false
+                        "searchable": false,
+                        "width": "90px"
                     }
                 ]
             });
