Swat Model Instance layout changes

--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -28,11 +28,13 @@
                     </tr>
                     <tr>
                         <th class="text-muted">Version </th>
-                        <td>{% if executed_by.model_program_fk.metadata.program.software_version.strip %}
-                            {{ executed_by.model_program_fk.metadata.program.software_version }}
-                        {% else %}
-                            <i>Not Provided</i>
-                        {% endif %}</td>
+                        <td>
+                            {% if executed_by.model_program_fk.metadata.program.software_version.strip %}
+                                {{ executed_by.model_program_fk.metadata.program.software_version }}
+                            {% else %}
+                                <i>Not Provided</i>
+                            {% endif %}
+                        </td>
                     </tr>
                      <tr>
                         <th class="text-muted">Resource URL </th>
