Made some text italic

--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -38,7 +38,7 @@
                                     {% if executed_by.model_program_fk.metadata.program.software_version.strip %}
                                         {{ executed_by.model_program_fk.metadata.program.software_version }}
                                     {% else %}
-                                        Not Provided
+                                        <i>Not Provided</i>
                                     {% endif %}
                                 </td>
                             </tr>
