[#734] change the name of Resource URL field to Resource URI under the ExecutedBy metadata term

--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -37,7 +37,7 @@
                         </td>
                     </tr>
                      <tr>
-                        <th class="text-muted">Resource URL </th>
+                        <th class="text-muted">Resource URI </th>
                          <td>{% if request.is_secure %}
                              <a id="permalink"
                                 href="https://{{ request.get_host }}/resource/{{ executed_by.model_program_fk.short_id }}/"
