--- a/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
+++ b/hs_swat_modelinstance/templates/pages/swatmodelinstanceresource.html
@@ -43,7 +43,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th class="text-muted">Resource URL</th>
+                                <th class="text-muted">Resource URI</th>
                                 <td>
                                     {% if request.is_secure %}
                                         <a id="permalink"
