Web App badge color

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2298,7 +2298,7 @@ table.overview tr > td:first-child {
 }
 
 .icon-resource-type {
-	padding: 17px 10px;
+	padding: 20px 10px;
 }
 
 .icon-resource-type > .glyphicon{
@@ -2372,7 +2372,11 @@ h4.title {
 }
 
 #badge-geographic-feature .badge {
-    background-color: #6A8593;
+    background-color: #795548;
+}
+
+#badge-web-app .badge {
+    background-color: rgb(242, 67, 55);
 }
 
 #color-scheme {
