--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -58,6 +58,12 @@
             </div>
         </div>
 
+        <div class="form-group" id="resource_creation_error">
+            <div class="col-sm-offset-2 col-sm-10">
+                <h3 style="color: red">{% if resource_creation_error %} {{ resource_creation_error }} {% endif %}</h3>
+            </div>
+        </div>
+
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" id="submit" class="btn btn-primary btn-lg btn-block disabled">Add HIS Time Series</button>
@@ -116,6 +122,7 @@
                 globurl = url;
                 $('#url-input').removeClass("has-success").removeClass("has-error").hide();
                 $('#loading-1-text').html('<h3></h3>');
+                $('#resource_creation_error').hide()
 
                 if (url.match(/WSDL$/) || url.match(/wsdl$/)){
                     $('.cuahsi-his-1').show();
@@ -130,16 +137,19 @@
                         url: '/hsapi/_internal/verify-rest-url/',
                         data: {url: url},
                         success: function (data, xhr, status) {
-                            if (data == 200) {
+                            if (data["status"] == "success")
+                            {
                                 $('#url-input').addClass("has-success");
                                 getVals('rest');
                             }
-                            else if (data == 400 || data == 404) {
+                            else
+                            {
                                 $('#loading-1-text').html('<h3>URL did not verify. There may be a problem with the URL you entered</h3>');
                                 $('#url-input').removeClass("has-success").addClass("has-error");
                             }
                         },
                         error: function(){
+                            $('#loading-1-text').html('<h3>URL did not verify. There may be a problem with the URL you entered</h3>');
                             $('#url-input').removeClass("has-success").addClass("has-error");
                         }
                     });
